--- a/style/sass/_global.scss
+++ b/style/sass/_global.scss
@@ -3,6 +3,7 @@
 html {scroll-behavior: smooth; background: url(../assets/pokeballs.jpg);}
 body {background: rgba(12, 10, 10, 0.9);}
 img {display: block;}
+a {text-decoration: none;}
 
 ul, ol, li {
   padding: 0;
