--- a/style/sass/_mediaQueries.scss
+++ b/style/sass/_mediaQueries.scss
@@ -27,6 +27,27 @@
     width: 100%;
   }
 
+  .header {
+    &__list {
+      padding-left: 20px;
+
+      &__item__timer {width: 60px;}
+
+      &__item__timer,
+      &__item__reset span {
+        @include fontSize(24);
+      }
+    
+      &__item__reset__arrow {
+        height: 25px;
+        width: 25px;
+    
+        &::before {top: -0.2em;}
+      }
+    }
+  }
+  
+
   .main {
     &__cards-container {
       &__card {
