--- a/style/style.css
+++ b/style/style.css
@@ -288,6 +288,10 @@ img {
   display: block;
 }
 
+a {
+  text-decoration: none;
+}
+
 ul, ol, li {
   padding: 0;
   margin: 0;
@@ -350,9 +354,10 @@ a, p {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  width: 100%;
+  padding-left: 50px;
 }
 
 .header__list::after {
@@ -360,35 +365,74 @@ a, p {
   position: absolute;
 }
 
-.header__list__item__timer {
-  font-size: 34px;
-  font-size: 3.4rem;
+.header__list__item__timer,
+.header__list__item__reset span {
+  font-size: 30px;
+  font-size: 3rem;
   font-family: 'Lexend Giga', sans-serif;
   font-weight: 400;
-  color: #DC0A2D;
+  color: #2e2e2e;
+  display: inline-block;
+  height: 1.5em;
+  width: 100px;
+  padding: .1em .2em;
+  border: 0.1em solid #0c0a0a;
+  border-radius: .2em;
   margin: 0;
-  -webkit-filter: drop-shadow(1px 1px 0 #0c0a0a);
-          filter: drop-shadow(1px 1px 0 #0c0a0a);
+  background: #f6f6f6;
+  text-align: right;
+  letter-spacing: -.1em;
+  text-transform: uppercase;
 }
 
-.header__list__item__reset:focus .header__list__item__reset__arrow {
+.header__list__item__reset span {
+  width: auto;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.header__list__item__reset {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+}
+
+.header__list__item__reset:focus span,
+.header__list__item__reset:hover span {
+  outline: none;
+  color: #004894;
+  background: #FFCB08;
+}
+
+.header__list__item__reset:focus .header__list__item__reset__arrow,
+.header__list__item__reset:hover .header__list__item__reset__arrow {
   border: 4px solid #ccc;
   background: #29AAFD;
   -webkit-transform: rotate(calc(360deg - 45deg));
           transform: rotate(calc(360deg - 45deg));
 }
 
-.header__list__item__reset:focus .header__list__item__reset__arrow::before {
+.header__list__item__reset:focus .header__list__item__reset__arrow::before,
+.header__list__item__reset:hover .header__list__item__reset__arrow::before {
   border-left: 0px solid #f6f6f6;
   border-top: 0px solid transparent;
   border-bottom: 0px solid transparent;
 }
 
 .header__list__item__reset__arrow {
-  position: relative;
+  display: inline-block;
+  position: absolute;
+  right: calc(100% + .2em);
   height: 40px;
   width: 40px;
-  border: 5px solid transparent;
+  border: .2em solid transparent;
   border-top-color: #f6f6f6;
   border-left-color: #f6f6f6;
   border-bottom-color: #f6f6f6;
@@ -403,30 +447,17 @@ a, p {
 .header__list__item__reset__arrow::before {
   content: "";
   position: absolute;
-  top: -3px;
+  top: -0.1em;
   left: 80%;
   height: 0;
   width: 0;
-  border-left: 10px solid #f6f6f6;
-  border-top: 10px solid transparent;
-  border-bottom: 10px solid transparent;
+  border-left: 0.3em solid #f6f6f6;
+  border-top: .3em solid transparent;
+  border-bottom: .3em solid transparent;
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
   -webkit-transition: all .4s ease-in-out;
   transition: all .4s ease-in-out;
-}
-
-.header__list__item__reset__arrow:hover {
-  border: 4px solid #ccc;
-  background: #29AAFD;
-  -webkit-transform: rotate(calc(360deg - 45deg));
-          transform: rotate(calc(360deg - 45deg));
-}
-
-.header__list__item__reset__arrow:hover::before {
-  border-left: 0px solid #f6f6f6;
-  border-top: 0px solid transparent;
-  border-bottom: 0px solid transparent;
 }
 
 .main {
@@ -439,6 +470,10 @@ a, p {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   height: calc( 100vh - 70px);
 }
 
@@ -659,14 +694,16 @@ a, p {
   position: absolute;
   bottom: 0;
   right: 3px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 
-.footer__landing__welcome p button:focus {
+.footer__landing__welcome p button:hover, .footer__landing__welcome p button:focus {
   outline: none;
   color: #004894;
 }
 
-.footer__landing__welcome p button:focus span {
+.footer__landing__welcome p button:hover span, .footer__landing__welcome p button:focus span {
   color: #DC0A2D;
 }
 
@@ -675,6 +712,8 @@ a, p {
   display: inline-block;
   -webkit-animation: blinkingArrow .5s ease-in infinite alternate;
           animation: blinkingArrow .5s ease-in infinite alternate;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 
 @-webkit-keyframes blinkingArrow {
@@ -718,6 +757,24 @@ a, p {
 @media (max-width: 695px) {
   .wrapper {
     width: 100%;
+  }
+  .header__list {
+    padding-left: 20px;
+  }
+  .header__list__item__timer {
+    width: 60px;
+  }
+  .header__list__item__timer,
+  .header__list__item__reset span {
+    font-size: 24px;
+    font-size: 2.4rem;
+  }
+  .header__list__item__reset__arrow {
+    height: 25px;
+    width: 25px;
+  }
+  .header__list__item__reset__arrow::before {
+    top: -0.2em;
   }
   .main__cards-container__card {
     -webkit-box-flex: 0;
