--- a/style/style.css
+++ b/style/style.css
@@ -591,14 +591,18 @@ a, p {
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 10;
+  z-index: 100;
   background: url(../assets/pokeballs.jpg);
+}
+
+.footer .matched-amount {
+  color: #DC0A2D;
 }
 
 .footer__landing {
   width: 100%;
   height: 100%;
-  background: rgba(12, 10, 10, 0.9);
+  background: rgba(12, 10, 10, 0.8);
 }
 
 .footer__landing__logo {
@@ -752,6 +756,10 @@ a, p {
             flex: 0 1 120px;
     height: 120px;
   }
+  .main__cards-container__card:hover, .main__cards-container__card:focus-within {
+    -webkit-filter: drop-shadow(-2em 1em 1em rgba(12, 10, 10, 0.8));
+            filter: drop-shadow(-2em 1em 1em rgba(12, 10, 10, 0.8));
+  }
 }
 
 @media (max-width: 695px) {
@@ -781,6 +789,10 @@ a, p {
         -ms-flex: 0 1 95px;
             flex: 0 1 95px;
     height: 95px;
+  }
+  .main__cards-container__card:hover, .main__cards-container__card:focus-within {
+    -webkit-filter: drop-shadow(-1em 0.5em 1em rgba(12, 10, 10, 0.8));
+            filter: drop-shadow(-1em 0.5em 1em rgba(12, 10, 10, 0.8));
   }
   .footer__landing__welcome p {
     font-size: 20px;
@@ -851,5 +863,12 @@ a, p {
         -ms-flex: 0 1 70px;
             flex: 0 1 70px;
     height: 70px;
+  }
+  .main__cards-container__card:hover, .main__cards-container__card:focus-within {
+    -webkit-transform: translate(4px, -4px) rotateY(15deg);
+            transform: translate(4px, -4px) rotateY(15deg);
+    -webkit-filter: drop-shadow(-1em 0.2em 1em rgba(12, 10, 10, 0.8));
+            filter: drop-shadow(-1em 0.2em 1em rgba(12, 10, 10, 0.8));
+    z-index: 2;
   }
 }
