--- a/style/sass/_footer.scss
+++ b/style/sass/_footer.scss
@@ -4,14 +4,18 @@
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 10;
+  z-index: 100;
 
   background: url(../assets/pokeballs.jpg);
+
+  .matched-amount {
+    color: $primaryColor;
+  }
 
   &__landing {
     width: 100%;
     height: 100%;
-    background: rgba(12, 10, 10, 0.9);
+    background: rgba(12, 10, 10, 0.8);
 
     &__logo {
       max-height: 260px;
